corpus/cpp/structured_binding/case-01/snapshots/gcc15_plus/dual_sink_structured/render.verbose.txt
error: [structured_binding] structured binding decomposition error @ src/main.cpp:8:10
help: ensure the type is decomposable and the number of bindings matches the member count
raw : only 1 name provided for structured binding
| src/main.cpp:8:10
|     auto [only] = pair;
|          ^
note: while 'Pair' decomposes into 2 elements
debug: rule_id=rule.family.structured_binding.message_terms
debug: matched_conditions=message_contains=name provided for structured binding, phase=semantic
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output